[package]
name = "async-context"
version = "0.1.0"
edition = "2021"
description = "context handle async future timeout or cancel"
authors = ["caojen <caojen@gmail.com>"]
resolver = "2"
keywords = ["context", "async"]
license = "MIT"
repository = "https://github.com/caojen/async-context"

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4" }
anyhow = { version = "1" }
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
