[package]
name = "context-async"
version = "0.1.1"
edition = "2021"
description = "context handle async future timeout or cancel"
authors = ["caojen <caojen@gmail.com>"]
resolver = "2"
keywords = ["context", "async"]
license = "MIT"
repository = "https://github.com/caojen/async-context"

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4" }
anyhow = { version = "1" }
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio", "tls-rustls", "macros"] }
