[package]
name = "context-async"
version = "0.3.2"
edition = "2021"
description = "context handle async future timeout or cancel"
authors = ["caojen <netid.caojen@gmail.com>"]
resolver = "2"
keywords = ["context", "async"]
license = "MIT"
repository = "https://github.com/caojen/async-context"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
actix-web-from-request = [ "actix-web" ]
name = [ "rand" ]

[dependencies]
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["sync", "time"] }
log = { version = "0.4" }
actix-web = { version = "4", features = ["rustls"], optional = true }
rand = { version = "0.8", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4" }
anyhow = { version = "1" }
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio", "tls-rustls", "macros"] }
